@@ -2,8 +2,9 @@ module God
   class Process
     WRITES_PID = [:start, :restart]
     
-    attr_accessor :name, :uid, :gid, :log, :log_cmd, :err_log, :err_log_cmd, :start, :stop, :restart,
-                  :unix_socket, :chroot, :env, :dir
+    attr_accessor :name, :uid, :gid, :log, :log_cmd, :err_log, :err_log_cmd,
+                  :start, :stop, :restart, :unix_socket, :chroot, :env, :dir,
+                  :stop_timeout, :stop_signal
     
     def initialize
       self.log = '/dev/null'
@@ -14,6 +15,8 @@ module God
       @pid = nil
       @unix_socket = nil
       @log_cmd = nil
+      @stop_timeout = God::STOP_TIMEOUT_DEFAULT
+      @stop_signal = God::STOP_SIGNAL_DEFAULT
     end
     
     def alive?
@@ -203,11 +206,11 @@ module God
         command = lambda do
           applog(self, :info, "#{self.name} stop: default lambda killer")
           
-          ::Process.kill('TERM', pid) rescue nil
-          applog(self, :info, "#{self.name} sent SIGTERM")
+          ::Process.kill(@stop_signal, pid) rescue nil
+          applog(self, :info, "#{self.name} sent SIG#{@stop_signal}")
           
           # Poll to see if it's dead
-          5.times do
+          @stop_timeout.times do
             begin
               ::Process.kill(0, pid)
             rescue Errno::ESRCH
@@ -220,14 +223,14 @@ module God
           end
           
           ::Process.kill('KILL', pid) rescue nil
-          applog(self, :info, "#{self.name} still alive; sent SIGKILL")
+          applog(self, :warn, "#{self.name} still alive after #{@stop_timeout}s; sent SIGKILL")
         end
       end
             
       if command.kind_of?(String)
         pid = nil
         
-        if @tracking_pid
+        if [:start, :restart].include?(action) && @tracking_pid
           # double fork god-daemonized processes
           # we don't want to wait for them to finish
           r, w = IO.pipe
@@ -326,13 +329,15 @@ module God
     #
     # Returns nothing
     def ensure_stop
+      applog(self, :warn, "#{self.name} ensuring stop...")
+
       unless self.pid
         applog(self, :warn, "#{self.name} stop called but pid is uknown")
         return
       end
       
       # Poll to see if it's dead
-      10.times do
+      @stop_timeout.times do
         begin
           ::Process.kill(0, self.pid)
         rescue Errno::ESRCH
@@ -345,7 +350,7 @@ module God
       
       # last resort
       ::Process.kill('KILL', self.pid) rescue nil
-      applog(self, :warn, "#{self.name} process still running 10 seconds after stop command returned. Force killing.")
+      applog(self, :warn, "#{self.name} still alive after #{@stop_timeout}s; sent SIGKILL")
     end
 
     private
